hotfix: corrección pesos y bias

--- a/NotebookPerceptron.ipynb
+++ b/NotebookPerceptron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8e4554f0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "ea737ef1",
    "metadata": {},
    "outputs": [
@@ -22,8 +22,8 @@
      "output_type": "stream",
      "text": [
       "Error: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      "Pesos: [[-103.53458403  -68.69269225  -67.48310146]]\n",
-      "Polarizacion: [-0.5898099]\n"
+      "Pesos: [[-0.67858583 -0.41029803  0.9240771 ]]\n",
+      "Polarizacion: [0.67065113]\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "84303d36",
    "metadata": {},
    "outputs": [
@@ -132,17 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "3c1855c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.25005302, 0.40830031, 0.30844143]), array([-0.6098099]), 1)"
+       "(array([-0.07624258, -0.46424205,  0.94001292]), array([-0.66320913]), 1)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 45,
    "id": "5f966e7a",
    "metadata": {},
    "outputs": [
@@ -171,24 +171,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 "
+      "0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 Pesos:  [-0.67858583 -0.41029803  0.9240771 ]\n",
+      "Bias:  [0.67065113]\n",
+      "Respuesta perceptrón:  Jitomate\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Jitomate'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "pesos = np.random.uniform(-1, 1, size=3)\n",
-    "bias = np.random.uniform(-1,1)\n",
+    "pesosEspecificos = np.array([-0.67858583, -0.41029803,  0.9240771 ])\n",
+    "biasEspecifico = np.array([0.67065113])\n",
     "learningRate = 0.01\n",
     "epocas = 100\n",
     "\n",
@@ -206,7 +197,7 @@
     "        bias += learningRate * error\n",
     "    print(totalErrors, end=\" \")\n",
     "        \n",
-    "hardlim(pesos, [59, 146, 117], bias)\n",
+    "hardlim(pesosEspecificos, [59, 146, 117], biasEspecifico)\n",
     "\n",
     "def perceptronFinal(dato):\n",
     "    if hardlim(pesos, dato, bias) == 1:\n",
@@ -214,13 +205,33 @@
     "    else: \n",
     "        return \"Limón\"\n",
     "\n",
-    "perceptronFinal([59, 146, 117])"
+    "print(\"Pesos: \",pesosEspecificos)\n",
+    "print(\"Bias: \",biasEspecifico)\n",
+    "print(\"Respuesta perceptrón: \",perceptronFinal([59, 146, 117]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2e912700",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(np.array([-0.67858583, -0.41029803,  0.9240771 ])))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a00fa33c",
+   "id": "0e814a7f",
    "metadata": {},
    "outputs": [],
    "source": []
